# 00-Playground-VSCode-

./: .gitignore  download_termine.html  termine_matthias_glocker.ics
.github/workflows/: python-ci.yml
onedrive-mcp-server/: .env.example  README.md  allowed_paths.txt  auth.py  config.py  onedrive_client.py  pyproject.toml  server.py
